Wed Nov 3 Felix Bellaby <felix@pooh.u-net.com>
	* cscmi.c: (set_lambda) avoid guile limit on number of arguments.
	* event.c: (button_release) check for end of game on button click.
	do not unref card images.
	* *.scm: made compatible with tighter scheme of guile-1.3 
	* eagle_wing.scm: fixed bugs in drops on foundation slots.

Mon Nov 02 Felix Bellaby <felix@pooh.u-net.com>
	* dialog.c: added options dialogs for games.
	* cscmi.h: added lambdas to pass options back and forth 
	* cscmi.c: added lambdas to pass options back and forth 
	* sol.h: added options dialog
	* sol.c: added options dialog
	* menu.c: reverted to "Variaation" menu.
	* events.c: eliminated unused arguments from scm functions.
	* *.scm: eliminated unused arguments from scm functions.
	* klondike.scm: added "Three card deals" option.
	
Sat Oct 31 Felix Bellaby <felix@pooh.u-net.com>
	* scheme_messages: added names of new games {for i18n}
	* sol.c: (game_file_to_game_name) converts "-" to " ".
	* sol.c: (game_file_to_help_entry) converts "_" to "-" {for DocBook}
	* press_data.h: press_data redesigned for efficiency
	* slot.h: hslot_type redesigned for efficiency
	* press_data.c: updated for new press_data / hslot_type
	* slot.c: updated for new press_data / hslot_type, fixed bugs in
	expanding slots
	* event.c: updated for new press_data / hslot_type,
	tidied handling of button events.
	* draw.c: updated for new press_data / hslot_type.
	* cscm.c: updated for new press_data / hslot_type.
	
Thu Oct 29 Felix Bellaby <felix@pooh.u-net.com>
	* event.c: (drop_moving_cards) fixed bug in expanding slots.
	(button_press_event) delay decision on what event means so that clicks
	can be recognised on any slot.
	(motion_notify_event) now initiates drag as well.
	(button_up_not_moved) removed.
	(button_release_event) incorporates button_up_not_moved function.
	* slot.c: (slot_pressed) speeded up detection on long slots.
	* press_data.c: (generate_press_data) fixed bugs in expanding slots.