@@ -2,7 +2,8 @@ TODO -- (roughly in order of importance)
 ~~~~
 integrate the game with gnome/gtk+-guile:  This will help us add hooks
 to the game to allow a game-sensitive menu.  It will also allow us
-make a preferences dialog for solitaire games.
+make a preferences dialog for solitaire games. *DONE without using 
+gnome/gtk+-guile*
 
 add undo:  This will probably be done scheme side, and will require
 modifying all of the games.  It will also make writing games a bit
@@ -33,7 +34,7 @@ actually useful.
 People have also requested Statistics.  That way it'll keep track of
 how many games you've played. etc.
 
-Add a splash screen while starting up.
+Add a splash screen while starting up. *DONE*
 
 And finally, if a stack is getting too long, try compressing it.
 
