@@ -1,5 +1,14 @@
+Mon Nov 9 Felix Bellaby <felix@pooh.u-net.com>
+	* splash.h: splash screen pseudo-widget.
+	* splash.c: splash screen pseudo-widget.
+	* splash.png: splash image { will spell "Aisleriot" with casino chips }
+	* sol.c: added session management and splash screen.
+	* klondike.scm: fixed bug in scoring.
+	* Makefile.am: updated for splash screen.
+	* TODO: updated.
+
 Wed Nov 3 Felix Bellaby <felix@pooh.u-net.com>
-	* cscmi.c: (set_lambda) avoid guile limit on number of arguments.
+	* cscmI.c: (set_lambda) avoid guile limit on number of arguments.
 	* event.c: (button_release) check for end of game on button click.
 	do not unref card images.
 	* *.scm: made compatible with tighter scheme of guile-1.3 
